--- a/package.json
+++ b/package.json
@@ -14,19 +14,19 @@
   },
   "dependencies": {
     "@turf/turf": "^7.3.0",
-    "leaflet": "^1.9.4",
     "lru-cache": "^11.2.2",
     "lucide-react": "^0.554.0",
+    "maplibre-gl": "^5.13.0",
     "next": "^16.0.3",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
-    "react-leaflet": "^5.0.0"
+    "react-map-gl": "^8.1.0"
   },
   "devDependencies": {
     "@biomejs/biome": "^2.3.7",
     "@tailwindcss/postcss": "^4.1.17",
-    "@types/leaflet": "^1.9.21",
     "@types/lru-cache": "^7.10.10",
+    "@types/maplibre-gl": "^1.14.0",
     "@types/node": "^24.10.1",
     "@types/react": "^19.2.6",
     "@types/react-dom": "^19.2.3",
