--- a/package.json
+++ b/package.json
@@ -17,15 +17,22 @@
     "check:setup": "node scripts/check-setup.js"
   },
   "dependencies": {
+    "@radix-ui/react-dialog": "^1.1.15",
+    "@radix-ui/react-select": "^2.2.6",
     "@supabase/supabase-js": "^2.84.0",
     "@turf/turf": "^7.3.0",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
     "lru-cache": "^11.2.2",
     "lucide-react": "^0.554.0",
     "maplibre-gl": "^5.13.0",
     "next": "^16.0.3",
+    "next-themes": "^0.4.6",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
-    "react-map-gl": "^8.1.0"
+    "react-map-gl": "^8.1.0",
+    "sonner": "^2.0.7",
+    "tailwind-merge": "^3.4.0"
   },
   "devDependencies": {
     "@biomejs/biome": "^2.3.7",
@@ -41,6 +48,7 @@
     "eslint-config-next": "^16.0.3",
     "postcss": "^8.5.6",
     "tailwindcss": "^4.1.17",
+    "tw-animate-css": "^1.4.0",
     "typescript": "^5.9.3"
   }
 }
